style.css
body {
    display: flex;
    justify-content: center;
    margin-top: 75px;
  }
  
  #game {
    width: 600px;
    height: 300px;
    border: 2px solid black;
    position: relative;
    overflow: hidden;
    background-image: linear-gradient(to top, lightblue, rgb(255, 221, 157));
  }

  #floor {
    width: 600px;
    height: 40px;
    background-color: grey;
    position: absolute;
    bottom: 0px;
  }
  
  #horse {
    width: 40px;
    height: 40px;
    background-color: black;
    position: absolute;
    bottom: 40px;
    left: 50px;
  }
  
  #barrel {
    width: 20px;
    height: 40px;
    background-color: brown;
    position: absolute;
    bottom: 40px;
    left: 580px;
  }

